<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="not_yet_registered_sign_up_now">Not yet registered? Sign Up Now</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="change">Change</string>
    <string name="retype_password">Retype Password</string>
    <string name="new_password">New Password</string>
    <string name="resest_password">Resest Password</string>
    <string name="send_otp">Send otp</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="verify_otp">Verify Otp</string>
</resources>