<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/darkpurple"
    tools:context=".login.lich_loginform">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/WelcomeText"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/grey"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/login_form_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resest_password"
                android:id="@+id/ResetPasswordText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_Dark"/>

            <EditText
                android:id="@+id/emailOrPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_form_1"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/email_or_phone_number"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHighlight="@color/cardview_dark_background"/>

            <Button
                android:id="@+id/sendOTPButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/send_otp"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple_Dark"
                app:cornerRadius ="20dp"/>

            <EditText
                android:id="@+id/otpCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_form_1"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/enter_otp"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHighlight="@color/cardview_dark_background"
                android:visibility="gone"/> <!-- Ẩn đi khi chưa cần nhập OTP -->

            <Button
                android:id="@+id/verifyOTPButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/verify_otp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple_Dark"
                app:cornerRadius ="20dp"
                android:visibility="gone"/> <!-- Ẩn đi khi chưa cần xác thực OTP -->

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/LoginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="8dp"
        android:text="@string/click_here_to_login"
        android:textAlignment="center"
        android:textColor="@color/purple_Dark"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="8dp"
        android:text="@string/not_yet_registered_sign_up_now"
        android:textAlignment="center"
        android:textColor="@color/purple_Dark"
        android:textSize="25sp" />


</LinearLayout>